--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
-{% block header_text %}Start a new To-Do list{% endblock %}
+{% block header_text %}
+    Start a new To-Do list
+{% endblock %}
 
-{% block form_action %}{% url 'new_list' %}{% endblock %}
-
+{% block form_action %}
+    {% url 'new_list' %}
+{% endblock %}
