--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -14,7 +14,7 @@
     <div class="container">
       <nav class="navbar navbar-default" role="navigation">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Superlists</a>
+          <a class="navbar-brand" href="/">Easy-todo</a>
           {% if user.email %}
             <ul class="nav navbar-nav navbar-left">
               <li><a href="{% url 'my_lists' user.email %}">My lists</a></li>
